force-app/main/default/objects/ACV_Allocation__c/fields/Percent_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Percent_Allocation__c</fullName>
    <label>Percent Allocation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>