force-app/main/default/objects/ACV_Allocation__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line - EXPIRING 4/28</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Intapp Integrate</fullName>
            </value>
            <value>
                <fullName>Intapp Integrate - Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Conflicts</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Conflicts - Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Experience</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Experience - Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Intake</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Intake - Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Terms</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Terms - Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Time</fullName>
            </value>
            <value>
                <fullName>Intapp Time - Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Walls</fullName>
            </value>
            <value>
                <fullName>LegalKey</fullName>
            </value>
            <value>
                <fullName>Records Management</fullName>
            </value>
            <value>
                <fullName>TFG - Other</fullName>
            </value>
            <value>
                <fullName>Intapp Open Sandbox</fullName>
            </value>
            <value>
                <fullName>Third Party Product - Experience</fullName>
            </value>
            <value>
                <fullName>Third Party Product - D&amp;B</fullName>
            </value>
            <value>
                <fullName>Intapp Pricing</fullName>
            </value>
            <value>
                <fullName>Intapp Pricing - Cloud</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>Relationships</fullName>
            </value>
            <value>
                <fullName>Relationships - Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Flow</fullName>
            </value>
            <value>
                <fullName>Intapp Flow - Cloud</fullName>
            </value>
            <value>
                <fullName>Integration Service - Cloud</fullName>
            </value>
            <value>
                <fullName>DealCloud - Cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>